--- a/client/app/styles/index.css
+++ b/client/app/styles/index.css
@@ -3,11 +3,18 @@
 	flex-direction: column;
 	min-height:100vh;
 	justify-content: space-between;
+  background-color: #595959;
 }
 
 .nav-main {
-  background-color: #d46c2d;
+  background-color: #d46c2e;
 }
+
+.stylish-color-drak {
+  background-color: #595959  !important; }
+
+.stylish-color-organ {
+  background-color: #d46c2e  !important; }
 
 .nav-main NavItem{
   color: white;
